# opencv-lab-of-blending

./: .gitignore  CMakeLists.txt  README.md  lab_2.cpp  lab_2.h  laplace_blending.cpp  laplace_blending.h  linear_blending.cpp  linear_blending.h  main.cpp
